RIPE NCC has merged 56885d0
* Lombok NonNull is too strict on JPA entity field [c21fb968]
* Fix typo [98758dfb]
* Stricter invariant for certificate issuance response [c56ca802]
* Inherited resources are not nullable [5bb99612]
* Cleanup [13c42af7]
* Track inherited resources for incoming resource certificates [4e7514a4]